🐛 fix(Constituent.tsx): add functionality to show tooltip on mouseover and hide on mouseleave for Constituent component 🐛 fix(Constituent.tsx): adjust offset for tooltip based on constituent type to improve positioning ✨ feat(Constituent.tsx): add logic to get nearest constituent element on mouseover to improve tooltip behavior ✨ feat(Constituent.tsx): add NumberTuple type to improve type safety 🐛 fix(SyntaxParser.tsx): decrease font size of Text component to improve readability ✨ feat(TagList.tsx): create TagList component to display a list of constituents ✨ feat(index.ts): export TagList component to make it available for import 🐛 fix(dummy.ts): update currentSentence value to improve sample data 🐛 fix(Layout.tsx): adjust min width of Container component to improve responsiveness ✨ feat(SyntaxEditorPage.tsx): add Tag

--- a/src/styles/constituent.scss
+++ b/src/styles/constituent.scss
@@ -2,15 +2,16 @@ $max-styling-count: 30; // 스타일을 계산할 최대 문장 성분 개수
 
 // 절&구
 $constituent-margin: 0.15rem; // 문장 성분 좌우 여백
-$constituent-label-y-pos: 1.8rem; // 문장 성분 라벨의 y축 위치
+$constituent-label-y-pos: 1.4rem; // 문장 성분 라벨의 y축 위치
 $constituent-height: 2.2rem; // 문장 성분 전체 영역 높이
 $constituent-initial-pos-factor: 0.48; // 첫번째 문장 성분과 글자 사이 간격 (낮을수록 간격 벌어짐)
 $constituent-dashed-border: 2px dashed;
+$constituent-dashed-border-start: 10px; // 점선 상단 길이 (글자 상단을 기준으로 높을수록 짧아짐)
 
 // 토큰
 $token-spacing: 2rem; // 토큰과 토큰 사이의 간격
 $token-top: 2.5rem; // 토큰 상단 여백
-$token-initial-pos-factor: 0.8; // 첫번째 토큰과 글자 사이 간격 (낮을수록 간격 벌어짐)
+$token-initial-pos-factor: 1; // 첫번째 토큰과 글자 사이 간격 (낮을수록 간격 벌어짐)
 
 @for $i from 1 through $max-styling-count {
   $offset: $constituent-height * ($i - $constituent-initial-pos-factor);
@@ -29,7 +30,7 @@ $token-initial-pos-factor: 0.8; // 첫번째 토큰과 글자 사이 간격 (낮
     &:before {
       content: '';
       position: absolute;
-      top: 15px;
+      top: $constituent-dashed-border-start;
       bottom: 0;
       right: 0;
       left: 0;
